@startuml
hide circle
hide methods

' =========================
' VALUE OBJECTS
' =========================

class Coordinates <<ValueObject>> {
- latitude
- longitude
}

class Runway <<ValueObject>> {
- name
- length
- orientation
}

class ChecklistItem <<ValueObject>> {
- description
- completed
}

' =========================
' AIRCRAFT AGGREGATE
' =========================

class AircraftModel {
- modelId
- manufacturer
- modelName
- seatingCapacity
- fuelCapacity
- maxRange
- cruisingSpeed
- image
}

class Aircraft {
- registrationNumber
- manufacturingDate
- status
- totalFlightHours
}

Aircraft --> AircraftModel : belongsTo

' =========================
' AIRPORT AGGREGATE
' =========================

class Airport {
- iataCode
- name
- city
- country
- timezone
- status
}

Airport --> Coordinates
Airport --> Runway
Airport --> AircraftModel : certifications

' =========================
' ROUTE & FLIGHT AGGREGATE
' =========================

class Route {
- routeId
- estimatedFlightTime
- minRangeRequired
- minCapacityRequired
- status
- usageCount
}

class ScheduledFlight {
- flightId
- departureDateTime
- arrivalDateTime
- status
}

Route --> Airport : origin
Route --> Airport : destination

ScheduledFlight --> Route
ScheduledFlight --> Aircraft

' =========================
' MAINTENANCE AGGREGATE
' =========================

class MaintenanceTemplate {
- templateId
- name
- type
}

class MaintenanceRecord {
- recordId
- description
- startDate
- expectedDuration
- completionDate
- status
- component
}

MaintenanceTemplate --> AircraftModel
MaintenanceTemplate --> ChecklistItem

MaintenanceRecord --> Aircraft
MaintenanceRecord --> MaintenanceTemplate
MaintenanceRecord --> ChecklistItem

' =========================
' USER AGGREGATE
' =========================

class User {
- userId
- username
- password
- role
}

@enduml